--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -14,6 +14,8 @@
 
 		<spring.boot.version>2.1.5.RELEASE</spring.boot.version>
 		<junit.version>5.2.0</junit.version>
+
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<modules>
