--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -122,7 +122,7 @@
 
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
+				<version>3.0.0-M3</version>
 			</plugin>
 
 			<plugin>
