--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -120,9 +120,41 @@
 				</configuration>
 			</plugin>
 
+			<!-- Define versions of plugins explicitly, to shut up the goal display-dependency-updates. -->
+			<plugin>
+				<artifactId>maven-clean-plugin</artifactId>
+				<version>3.1.0</version>
+			</plugin>
+
+			<plugin>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>3.0.0-M1</version>
+			</plugin>
+
+			<plugin>
+				<artifactId>maven-install-plugin</artifactId>
+				<version>3.0.0-M1</version>
+			</plugin>
+
+			<plugin>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.8.2</version>
+			</plugin>
+
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M3</version>
+			</plugin>
+
+			<!-- Define versions of plugins explicitly, to shut up maven-enforcer-plugin validating. -->
+			<plugin>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>3.1.2</version>
+			</plugin>
+
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>3.1.0</version>
 			</plugin>
 
 			<plugin>
@@ -130,7 +162,7 @@
 				<!-- by executing 'mvn versions:display-plugin-updates' -->
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>versions-maven-plugin</artifactId>
-				<version>2.5</version>
+				<version>2.7</version>
 				<configuration>
 					<generateBackupPoms>false</generateBackupPoms>
 				</configuration>
@@ -140,9 +172,10 @@
 				<!-- This plugin will check the rules listed below when 'mvn validate' is executed. -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-enforcer-plugin</artifactId>
-				<version>1.4.1</version>
+				<version>3.0.0-M2</version>
 				<executions>
 					<execution>
+						<id>default-cli</id>
 						<phase>validate</phase>
 						<goals>
 							<goal>enforce</goal>
@@ -151,8 +184,16 @@
 							<rules>
 								<!-- Make sure that Maven is used in at least this version. -->
 								<requireMavenVersion>
-									<version>3.2.5</version>
+									<version>3.6.1</version>
 								</requireMavenVersion>
+								<!-- Make sure that dependency version numbers converge. -->
+								<dependencyConvergence />
+								<!-- Make sure that all plugins have versions defined. -->
+								<requirePluginVersions>
+									<banLatest>true</banLatest>
+									<banRelease>false</banRelease>
+									<banSnapshots>true</banSnapshots>
+								</requirePluginVersions>
 							</rules>
 						</configuration>
 					</execution>
