--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -12,8 +12,8 @@
 		<!-- This is the Java version that is used. -->
 		<maven.compiler.release>12</maven.compiler.release>
 
-		<spring.boot.version>2.1.8.RELEASE</spring.boot.version>
-		<junit.version>5.5.2</junit.version>
+		<spring.boot.version>2.2.0.RELEASE</spring.boot.version>
+		<junit.version>5.6.0-M1</junit.version>
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -68,19 +68,19 @@
 			<dependency>
 				<groupId>com.google.guava</groupId>
 				<artifactId>guava</artifactId>
-				<version>23.0</version>
+				<version>28.1-jre</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hamcrest</groupId>
 				<artifactId>hamcrest-core</artifactId>
-				<version>2.1</version>
+				<version>2.2</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hamcrest</groupId>
 				<artifactId>hamcrest-library</artifactId>
-				<version>2.1</version>
+				<version>2.2</version>
 			</dependency>
 
 			<dependency>
