create report for production of mines

--- a/parent/addons/src/main/resources/com/pim/stars/mineral/imp/reports.properties
+++ b/parent/addons/src/main/resources/com/pim/stars/mineral/imp/reports.properties
@@ -1,1 +1,2 @@
 com.pim.stars.mineral.imp.reports.PlanetHasMinedReport={0} has mined {1} kTs of minerals.
+com.pim.stars.mineral.imp.reports.PlanetHasBuiltMinesReport={0} has built {1} mines.
