--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -259,10 +259,13 @@
 				<plugin>
 					<!-- This plugin helps finding the latest plugin or dependency versions for your modules -->
 					<!-- by executing 'mvn versions:display-plugin-updates' -->
+					<!-- or 'mvn versions:display-dependency-updates' -->
+					<!-- or 'mvn versions:display-property-updates' -->
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>versions-maven-plugin</artifactId>
 					<version>2.7</version>
 					<configuration>
+						<rulesUri>file:///${project.basedir}/versions-maven-plugin-rules.xml</rulesUri>
 						<generateBackupPoms>false</generateBackupPoms>
 					</configuration>
 				</plugin>
@@ -304,7 +307,7 @@
 					<!-- This plugin will calculate the test coverage when 'mvn test' is executed. -->
 					<groupId>org.jacoco</groupId>
 					<artifactId>jacoco-maven-plugin</artifactId>
-					<version>0.8.4</version>
+					<version>0.8.5</version>
 
 					<executions>
 						<!-- This modifies the command line arguments for the test execution, so that test coverage is tracked. -->
@@ -330,11 +333,18 @@
 			</plugins>
 		</pluginManagement>
 
-		<!-- This activates the plugin in the modules, so that they create reports during their test phase. -->
+		<!-- This activates plugins in all modules... -->
 		<plugins>
 			<plugin>
+				<!-- ... so that they create reports during their test phase. -->
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
+			</plugin>
+
+			<plugin>
+				<!-- ... so that the minimum maven version is known in the versions-maven-plugin. -->
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-enforcer-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
